--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ p {
 
 article.hotel {
     background-color: white;
-    border: solid;
     border-radius: 20px 20px;
     border-color: white;
     margin-bottom: 10em;
@@ -59,7 +58,7 @@ article.hotel {
 }
 
 h3 {
-    font-size: 1em;
+    font-size: 14px;
 }
 
 .imageflottante {
@@ -83,7 +82,8 @@ article.hotel1 {
     border: solid;
     border-color: white;
     width: 280px;
-    margin: 1em;
+    margin: 0.5em;
+    margin-bottom: 0.25cm;
 }
 
 .populaires {
@@ -104,10 +104,6 @@ article.hotel1 {
 
 img {
     object-fit: cover;
-}
-
-h2 {
-    padding-right: initial;
 }
 
 article p {
@@ -138,6 +134,12 @@ footer ul {
     margin-left: 1.6cm;
 }
 
-@font-face {
-    font-family: ;
+article.hotel h3 {
+    margin-top: 0.2em;
+    margin-left: 0.5em;
+}
+
+article.hotel p {
+    margin-left: 0.5em;
+    font-size: 12px;
 }
