--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ img {
 
 article p {
     line-height: 1px;
+    margin-top: auto;
 }
 
 footer {
@@ -142,5 +143,13 @@ article.hotel h3 {
 
 article.hotel p {
     margin-left: 0.5em;
-    font-size: 12px;
+    font-size: 14px;
+}
+
+.Hébergements h2 {
+    margin-left: 0.35em;
+}
+
+.populaires h2 {
+    margin-left: 1.2em;
 }
