margin activité a marseille + dimension image modifiée

--- a/style.css
+++ b/style.css
@@ -229,3 +229,12 @@
                                                                                                                 .Diverstisements h2 {
                                                                                                                     margin-left: 2.7em;
                                                                                                                 }
+                                                                                                                
+                                                                                                                .block2 article {
+                                                                                                                    margin-bottom: 2em;
+                                                                                                                    margin-top: 0em;
+                                                                                                                }
+                                                                                                                
+                                                                                                                .block4 article {
+                                                                                                                    margin-bottom: 2em;
+                                                                                                                }
