--- a/style.css
+++ b/style.css
@@ -218,6 +218,8 @@
                                                                                                                     flex-wrap: wrap;
                                                                                                                     margin-left: 4em;
                                                                                                                     margin-right: 4em;
+                                                                                                                    margin-bottom: 1em;
+                                                                                                                    margin-top: 1em;
                                                                                                                 }
                                                                                                                 
                                                                                                                 article.Activités h3 {
@@ -228,6 +230,7 @@
                                                                                                                 
                                                                                                                 .Diverstisements h2 {
                                                                                                                     margin-left: 2.7em;
+                                                                                                                    margin-top: -1em;
                                                                                                                 }
                                                                                                                 
                                                                                                                 .block2 article {
