margin star icon

--- a/style.css
+++ b/style.css
@@ -242,3 +242,8 @@ article.Activités h3 {
 .block4 article {
     margin-bottom: 2em;
 }
+.star {
+    margin-left: 0.5em;
+    margin-bottom: 0.5em;
+    margin-top: -0.5em;
+}
