--- a/style.css
+++ b/style.css
@@ -251,21 +251,30 @@ button {
     background-color: #0065FC;
     color: white;
     border-radius: 0px 10px 10px 0px;
-    height: 29px;
-    width: 110px;
+    height: 35px;
+    width: 105px;
     border-style: none;
 }
 #site-search {
     border-left: none;
     border-right: none;
     margin-right: -0.9em;
-    height: 25px;
+    height: 31px;
     border-width: 1px;
     border-style: solid;
     border-color: #F2F2F2;
 }
 .fa-map-marker-alt {
     border-style: solid;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 10.5px;
+    padding-left: 1em;
+    padding-top: 0.45em;
+    margin-bottom: 1em;
+    border-width: 1px;
+    padding-bottom: 1em;
+    margin-right: -0.3em;
+    border-color: #F2F2F2;
+    background-color: #F2F2F2;
+    border-radius: 10px 0px 0px 10px;
 }
