--- a/style.css
+++ b/style.css
@@ -308,7 +308,10 @@ button {
     border-color: #DEEBFF;
     background-color: #DEEBFF;
     border-radius: 50%;
-    padding: 0.3cm;
+    padding-left: 0.3cm;
+    padding-top: 0.3cm;
+    padding-bottom: 0.3cm;
+    padding-right: 0.3cm;
 }
 .filter {
     border: solid;
@@ -316,7 +319,20 @@ button {
     border-left: transparent;
     border-color: #b4afaf67;
     border-width: 2px;
+    height: 39px;
     margin-right: 1em;
     padding-right: 1.5em;
     margin-left: 1em;
+    padding-bottom: -1cm;
+}
+strong {
+    margin-left: 0.5em;
+    font-size: 15px;
+}
+#choix {
+    margin-left: 2em;
+}
+#choix h3 {
+    font-size: 15px;
+    margin-right: 1em;
 }
