--- a/style.css
+++ b/style.css
@@ -29,10 +29,7 @@
     display: flex;
     flex-direction: row;
     padding-right: 10px;
-}
-
-a:hover {
-    color: #0065FC;
+    margin-right: 1.5cm;
 }
 
 nav li {
@@ -367,4 +364,8 @@ header img {
     height: 20%;
     margin-bottom: -1em;
     margin-top: -1em;
+}
+
+.menu {
+    margin-top: 2cm;
 }
