--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: row;
     padding-right: 10px;
-    margin-right: 1.5cm;
+    margin-left: 50em;
 }
 
 nav li {
@@ -355,28 +355,35 @@ header p {
 }
 
 header h1 {
-    margin-top: 1cm;
+    margin-top: 1em;
 }
 
 header img {
-    margin-left: 1.8cm;
-    width: 6.5%;
-    height: 20%;
-    margin-bottom: -1em;
-    margin-top: -1em;
+    height: 30px;
+    margin-top: 1em;
+    padding-left: 1em;
 }
 
 .menu {
-    margin-top: 2cm;
+    margin-top: 1em;
+    margin-left: 4em;
 }
 
 .menu a:hover {
     color: #0065FC;
     text-decoration: underline transparent;
     border-top: solid;
-    padding-top: 1.6cm;
+    padding-top: 1em;
 }
 
 .menu a {
     color: black;
+}
+
+#containerhead {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    flex-direction: row-reverse;
+    margin-bottom: 1em;
 }
