--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ nav li {
 h1 {
     margin-top: -2em;
     font-size: 16px;
+    font-weight: 900;
 }
 
 article.hotel {
@@ -403,4 +404,8 @@ header img {
 
 body {
     font-family: 'Raleway', sans-serif;
+}
+
+strong:hover {
+    color: #0065FC;
 }
