--- a/style.css
+++ b/style.css
@@ -410,4 +410,9 @@ strong:hover {
     color: #0065FC;
 }
 
-@media screen and (max-width: 960px)
+@media screen and (min-width: 960px) {
+    #conteneurs {
+        display: flex;
+        flex-wrap: wrap-reverse;
+    }
+}
