--- a/style.css
+++ b/style.css
@@ -471,7 +471,7 @@
                 }
                 #conteneur1 img {
                     border-radius: 40px 40px 0px 0px;
-                    border: solid white 7px;
+                    border: solidwhite 7px;
                     border-color: white;
                     width: 800px;
                     height: 270px;
@@ -482,5 +482,43 @@
                 }
                 article.hotel h3 {
                     font-size: 32px;
+                }
+                #block {
+                    display: flex;
+                    flex-wrap: wrap;
+                    flex-direction: column;
+                }
+                #block img {
+                    border-radius: 40px 40px 0px 0px;
+                    width: 800px;
+                    height: 270px;
+                }
+                #block article {
+                    border-radius: 40px;
+                    box-shadow: 1px 1px 12px rgb(212, 211, 211);
+                    width: 800px;
+                    margin-left: 3em;
+                }
+                #block h3 {
+                    font-size: 32px;
+                }
+                .Diverstisements h2 {
+                    font-size: 44px;
+                    margin-left: 2.5em;
+                }
+                #footer {
+                    display: flex;
+                    flex-wrap: wrap;
+                    flex-direction: column;
+                    background-color: #F2F2F2;
+                }
+                #footer h3 {
+                    font-size: 30px;
+                }
+                #footer ul {
+                    font-size: 23px;
+                }
+                .fin {
+                    margin-bottom: 1em;
                 }
             }
