--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@
             border-color: white;
             width: 290px;
             margin: 1em;
-            margin-bottom: 0.5cm;
+            margin-bottom: 1.5em;
             margin-right: 0.25em;
             text-align: left;
         }
@@ -109,8 +109,7 @@
         
         .populaires {
             background-color: #F2F2F2;
-            background-size: 30%;
-            width: 320px;
+            width: 25%;
             border-radius: 10px 10px;
             margin-right: 0.25em;
             padding-right: 0.5cm;
@@ -121,8 +120,8 @@
         
         .populaires img {
             border-radius: 20px 0px 0px 20px;
-            width: 120px;
-            height: 120px;
+            width: 140px;
+            height: 140px;
             border: solid white 2px;
             border-right-width: 15px;
         }
@@ -137,6 +136,7 @@
         
         footer {
             background-color: #F2F2F2;
+            width: 100%;
         }
         
         footer ul {
