--- a/style.css
+++ b/style.css
@@ -413,6 +413,10 @@
             color: #0065FC;
         }
         
+        .fa-search {
+            visibility: hidden;
+        }
+        
         @media screen and (max-width: 980px) {
             #conteneurs {
                 flex-direction: column-reverse;
@@ -493,5 +497,17 @@
             .fin h3 {
                 margin-right: 1em;
                 padding-left: 0.9em;
+            }
+            .infos {
+                margin-top: 3em;
+            }
+            .fa-search {
+                visibility: visible;
+            }
+            button {
+                visibility: hidden;
+            }
+            #site-search {
+                width: 200px;
             }
         }
