--- a/style.css
+++ b/style.css
@@ -503,11 +503,19 @@
             }
             .fa-search {
                 visibility: visible;
+                border: solid;
+                background-color: #0065FC;
+                padding: 0.3em;
+                margin-right: 1em;
+                margin-right: 1em;
+                padding: 1em;
+                border-radius: 12px;
             }
             button {
-                visibility: hidden;
+                display: none;
             }
             #site-search {
-                width: 200px;
+                width: 170px;
+                border-right: none;
             }
         }
