--- a/style.css
+++ b/style.css
@@ -625,6 +625,7 @@ strong:hover {
         margin-left: 3em;
         padding-right: 1em;
         font-size: larger;
+        margin-top: 4em;
     }
     header p {
         margin-left: 4em;
@@ -635,14 +636,39 @@ strong:hover {
     #containerhead {
         width: 100%;
         flex-direction: row-reverse;
-    }
-    #containerhead ul {
+        position: relative;
         margin: auto;
-        flex-direction: row-reverse;
-        flex-wrap: wrap-reverse;
-        position: absolute;
+        margin-left: 2em;
     }
-    header img {
-        width: 20%;
-    }
+}
+
+#containerhead ul {
+    flex-wrap: wrap-reverse;
+}
+
+header img {
+    width: 20%;
+    position: absolute;
+    left: 1em;
+    margin-top: 0.5em;
+}
+
+
+}
+.register {
+    float: left
+}
+.home {
+    font-size: medium;
+    position: absolute;
+    left: 2em;
+    bottom: -2em;
+}
+.home1 {
+    position: absolute;
+    font-size: medium;
+    bottom: -2em;
+    left: 13em;
+}
+
 }
