--- a/style.css
+++ b/style.css
@@ -625,7 +625,6 @@ strong:hover {
         margin-left: 3em;
         padding-right: 1em;
         font-size: larger;
-        margin-top: 4em;
     }
     header p {
         margin-left: 4em;
@@ -633,42 +632,45 @@ strong:hover {
     #choix h3 {
         margin-left: 1em;
     }
+}
+
+@media screen and (max-device-width: 480px) {
     #containerhead {
         width: 100%;
         flex-direction: row-reverse;
         position: relative;
         margin: auto;
         margin-left: 2em;
+        padding-top: 2em;
+        padding-bottom: 2em;
     }
-}
-
-#containerhead ul {
-    flex-wrap: wrap-reverse;
-}
-
-header img {
-    width: 20%;
-    position: absolute;
-    left: 1em;
-    margin-top: 0.5em;
-}
-
-
-}
-.register {
-    float: left
-}
-.home {
-    font-size: medium;
-    position: absolute;
-    left: 2em;
-    bottom: -2em;
-}
-.home1 {
-    position: absolute;
-    font-size: medium;
-    bottom: -2em;
-    left: 13em;
-}
-
+    #containerhead ul {
+        flex-wrap: wrap-reverse;
+    }
+    header img {
+        width: 20%;
+        position: absolute;
+        left: 1em;
+        top: 1.5em;
+    }
+    .register {
+        position: relative;
+        bottom: 1em;
+        right: 2em;
+    }
+    .home {
+        font-size: medium;
+        position: absolute;
+        left: 2em;
+        bottom: 1em;
+    }
+    .home1 {
+        position: absolute;
+        font-size: medium;
+        bottom: 1em;
+        left: 13em;
+    }
+    #containerhead a.register:hover {
+        border-top: none;
+    }
 }
